hphp/hack/test/typecheck/enum_as_false_input.php.like_types.exp
File "enum_as_false_input.php", line 23, characters 10-24:
Invalid return type (Typing[4110])
File "enum_as_false_input.php", line 22, characters 17-36:
Expected ~classname<DerpyEnum> because it is an unenforceable type
File "enum_as_false_input.php", line 17, characters 6-13:
But got classname<BaitEnum>; implicitly defined constant ::class is a string that contains the fully qualified name of BaitEnum
